--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "ecommerce",
   "version": "1.0.0",
   "description": "An ecommerce application",
-  "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js",
-    "client": "npm run dev --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "nodemon src/server/main.ts -w src/server",
+    "start": "NODE_ENV=production ts-node src/server/main.ts",
+    "build": "vite build"
   },
   "repository": {
     "type": "git",
@@ -20,23 +19,27 @@
   },
   "homepage": "https://github.com/aileenchany/ecommerce#readme",
   "dependencies": {
+    "concurrently": "^8.0.1",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
     "@reduxjs/toolkit": "^1.9.3",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
-    "concurrently": "^8.0.1",
     "daisyui": "^2.51.5",
-    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
-    "typescript": "^5.0.4"
+    "vite-express": "*"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^3.1.0",
     "jest": "^29.5.0",
     "tailwindcss": "^3.3.1",
+    "typescript": "^5.0.4",
     "vite": "^4.2.1"
   }
 }
