Adding package.json

--- a/package.json
+++ b/package.json
@@ -19,20 +19,21 @@
   },
   "homepage": "https://github.com/aileenchany/ecommerce#readme",
   "dependencies": {
-    "concurrently": "^8.0.1",
-    "express": "^4.18.2",
-    "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
+    "concurrently": "^8.0.1",
+    "create-vite-express": "^0.0.5",
     "daisyui": "^2.51.5",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "ts-node": "^10.9.1",
     "vite-express": "*"
   },
   "devDependencies": {
