--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemon": "^2.0.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "ts-node": "^10.9.1",
     "vite-express": "*"
