--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
-    "tailwindcss": "^3.3.1",
     "ts-node": "^10.9.1",
     "vite-express": "*"
   },
@@ -43,11 +42,14 @@
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.39.0",
     "eslint-plugin-react": "^7.32.2",
     "jest": "^29.5.0",
+    "postcss": "^8.4.23",
     "prettier": "2.8.8",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4",
-    "vite": "^4.2.1"
+    "vite": "^4.3.5"
   }
 }
